// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Color Variants 1`] = `
<div style="display: grid; grid-template-columns: repeat(4, 60px); gap: var(--ds-size-2); justify-content: center; height: 100%; width: 100%;">
  <span
    data-count="9+"
    data-variant="base"
    data-color="neutral"
  >
  </span>
  <span
    data-count="9+"
    data-variant="tinted"
    data-color="neutral"
  >
  </span>
  <span
    data-count="9+"
    data-variant="base"
    data-color="danger"
  >
  </span>
  <span
    data-count="9+"
    data-variant="tinted"
    data-color="danger"
  >
  </span>
  <span
    data-count="9+"
    data-variant="base"
    data-color="info"
  >
  </span>
  <span
    data-count="9+"
    data-variant="tinted"
    data-color="info"
  >
  </span>
  <span
    data-count="9+"
    data-variant="base"
    data-color="warning"
  >
  </span>
  <span
    data-count="9+"
    data-variant="tinted"
    data-color="warning"
  >
  </span>
  <span
    data-count="9+"
    data-variant="base"
    data-color="success"
  >
  </span>
  <span
    data-count="9+"
    data-variant="tinted"
    data-color="success"
  >
  </span>
</div>
`;

exports[`Custom Placement 1`] = `
<span
  data-overlap="rectangle"
  data-placement="top-right"
>
  <span
    data-variant="base"
    data-color="danger"
    style="--dsc-badge-top: 16%; --dsc-badge-right: 10%;"
  >
  </span>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="title-_r_4_"
  >
    <title id="title-_r_4_">
      Meldinger
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M2.592 7.63a.224.224 0 0 0-.342.19v9.661a.5.5 0 0 0 .854.354l5.487-5.487a.5.5 0 0 0-.077-.77zm1.571 11.266a.5.5 0 0 0 .354.854H19.48a.5.5 0 0 0 .354-.854l-5.842-5.841a.5.5 0 0 0-.63-.062l-.948.631a.75.75 0 0 1-.832 0l-.947-.632a.5.5 0 0 0-.631.063zm16.733-1.06a.5.5 0 0 0 .854-.353V7.821a.225.225 0 0 0-.344-.19l-5.922 3.947a.5.5 0 0 0-.076.77zm.414-11.915c.213-.133.3-.425.087-.558A.75.75 0 0 0 21 5.25H3a.75.75 0 0 0-.398.114c-.213.134-.126.425.087.558l.708.442.018.012 8.307 5.538a.5.5 0 0 0 .554 0l8.307-5.538.019-.012z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
</span>
`;

exports[`Floating 1`] = `
<span
  data-overlap="rectangle"
  data-placement="top-right"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="title-_r_0_"
  >
    <title id="title-_r_0_">
      Meldinger
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M2.592 7.63a.224.224 0 0 0-.342.19v9.661a.5.5 0 0 0 .854.354l5.487-5.487a.5.5 0 0 0-.077-.77zm1.571 11.266a.5.5 0 0 0 .354.854H19.48a.5.5 0 0 0 .354-.854l-5.842-5.841a.5.5 0 0 0-.63-.062l-.948.631a.75.75 0 0 1-.832 0l-.947-.632a.5.5 0 0 0-.631.063zm16.733-1.06a.5.5 0 0 0 .854-.353V7.821a.225.225 0 0 0-.344-.19l-5.922 3.947a.5.5 0 0 0-.076.77zm.414-11.915c.213-.133.3-.425.087-.558A.75.75 0 0 0 21 5.25H3a.75.75 0 0 0-.398.114c-.213.134-.126.425.087.558l.708.442.018.012 8.307 5.538a.5.5 0 0 0 .554 0l8.307-5.538.019-.012z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
</span>
<span
  data-overlap="rectangle"
  data-placement="top-left"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="title-_r_1_"
  >
    <title id="title-_r_1_">
      Meldinger
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M2.592 7.63a.224.224 0 0 0-.342.19v9.661a.5.5 0 0 0 .854.354l5.487-5.487a.5.5 0 0 0-.077-.77zm1.571 11.266a.5.5 0 0 0 .354.854H19.48a.5.5 0 0 0 .354-.854l-5.842-5.841a.5.5 0 0 0-.63-.062l-.948.631a.75.75 0 0 1-.832 0l-.947-.632a.5.5 0 0 0-.631.063zm16.733-1.06a.5.5 0 0 0 .854-.353V7.821a.225.225 0 0 0-.344-.19l-5.922 3.947a.5.5 0 0 0-.076.77zm.414-11.915c.213-.133.3-.425.087-.558A.75.75 0 0 0 21 5.25H3a.75.75 0 0 0-.398.114c-.213.134-.126.425.087.558l.708.442.018.012 8.307 5.538a.5.5 0 0 0 .554 0l8.307-5.538.019-.012z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
</span>
<span
  data-overlap="rectangle"
  data-placement="bottom-right"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="title-_r_2_"
  >
    <title id="title-_r_2_">
      Meldinger
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M2.592 7.63a.224.224 0 0 0-.342.19v9.661a.5.5 0 0 0 .854.354l5.487-5.487a.5.5 0 0 0-.077-.77zm1.571 11.266a.5.5 0 0 0 .354.854H19.48a.5.5 0 0 0 .354-.854l-5.842-5.841a.5.5 0 0 0-.63-.062l-.948.631a.75.75 0 0 1-.832 0l-.947-.632a.5.5 0 0 0-.631.063zm16.733-1.06a.5.5 0 0 0 .854-.353V7.821a.225.225 0 0 0-.344-.19l-5.922 3.947a.5.5 0 0 0-.076.77zm.414-11.915c.213-.133.3-.425.087-.558A.75.75 0 0 0 21 5.25H3a.75.75 0 0 0-.398.114c-.213.134-.126.425.087.558l.708.442.018.012 8.307 5.538a.5.5 0 0 0 .554 0l8.307-5.538.019-.012z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
</span>
<span
  data-overlap="rectangle"
  data-placement="bottom-left"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="title-_r_3_"
  >
    <title id="title-_r_3_">
      Meldinger
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M2.592 7.63a.224.224 0 0 0-.342.19v9.661a.5.5 0 0 0 .854.354l5.487-5.487a.5.5 0 0 0-.077-.77zm1.571 11.266a.5.5 0 0 0 .354.854H19.48a.5.5 0 0 0 .354-.854l-5.842-5.841a.5.5 0 0 0-.63-.062l-.948.631a.75.75 0 0 1-.832 0l-.947-.632a.5.5 0 0 0-.631.063zm16.733-1.06a.5.5 0 0 0 .854-.353V7.821a.225.225 0 0 0-.344-.19l-5.922 3.947a.5.5 0 0 0-.076.77zm.414-11.915c.213-.133.3-.425.087-.558A.75.75 0 0 0 21 5.25H3a.75.75 0 0 0-.398.114c-.213.134-.126.425.087.558l.708.442.018.012 8.307 5.538a.5.5 0 0 0 .554 0l8.307-5.538.019-.012z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
</span>
<span
  data-overlap="circle"
  data-placement="top-right"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <span
    data-variant="circle"
    role="img"
    aria-label="Avatar 1"
    style="width: 2rem; height: 2rem; border-radius: 50%;"
  >
  </span>
</span>
<span
  data-overlap="circle"
  data-placement="top-left"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <span
    data-variant="circle"
    role="img"
    aria-label="Avatar 1"
    style="width: 2rem; height: 2rem; border-radius: 50%;"
  >
  </span>
</span>
<span
  data-overlap="circle"
  data-placement="bottom-right"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <span
    data-variant="circle"
    role="img"
    aria-label="Avatar 1"
    style="width: 2rem; height: 2rem; border-radius: 50%;"
  >
  </span>
</span>
<span
  data-overlap="circle"
  data-placement="bottom-left"
>
  <span
    data-variant="base"
    data-color="danger"
  >
  </span>
  <span
    data-variant="circle"
    role="img"
    aria-label="Avatar 1"
    style="width: 2rem; height: 2rem; border-radius: 50%;"
  >
  </span>
</span>
`;

exports[`In Button 1`] = `
<div style="display: flex; gap: var(--ds-size-4);">
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
    <span
      data-overlap="rectangle"
      data-placement="top-right"
    >
      <span
        data-count="99+"
        data-variant="base"
        data-color="danger"
      >
      </span>
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-labelledby="title-_r_9_"
      >
        <title id="title-_r_9_">
          Innboks
        </title>
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M3 5.25a.75.75 0 0 0-.75.75v13c0 .414.336.75.75.75h18a.75.75 0 0 0 .75-.75V6a.75.75 0 0 0-.75-.75zm.75 11.94 5.273-5.273L3.75 8.4zm6.546-4.425L4.81 18.25h14.378l-5.485-5.485-1.288.859a.75.75 0 0 1-.832 0zm4.681-.848L20.25 8.4v8.788zm-11-5.167L12 12.099l8.023-5.349z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
    </span>
  </button>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
    <span
      data-overlap="rectangle"
      data-placement="top-right"
    >
      <span
        data-count="10"
        data-variant="base"
        data-color="danger"
      >
      </span>
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-labelledby="title-_r_a_"
      >
        <title id="title-_r_a_">
          Meldinger
        </title>
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4.75 5A.25.25 0 0 1 5 4.75h11a.25.25 0 0 1 .25.25v.5a.75.75 0 0 0 1.5 0V5A1.75 1.75 0 0 0 16 3.25H5A1.75 1.75 0 0 0 3.25 5v10a.75.75 0 0 0 1.085.67l1.502-.75a.75.75 0 0 0-.671-1.341l-.416.207zM9 8.75a.25.25 0 0 0-.25.25v8c0 .138.112.25.25.25h7a.75.75 0 0 1 .335.08l2.915 1.457V9a.25.25 0 0 0-.25-.25zM7.25 9c0-.966.784-1.75 1.75-1.75h10c.966 0 1.75.784 1.75 1.75v11a.75.75 0 0 1-1.085.67l-3.842-1.92H9A1.75 1.75 0 0 1 7.25 17zm3 4a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 0 1.5H11a.75.75 0 0 1-.75-.75m3.75-.75a.75.75 0 0 0 0 1.5h.01a.75.75 0 0 0 0-1.5zm2.25.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 0 1.5H17a.75.75 0 0 1-.75-.75"
          clip-rule="evenodd"
        >
        </path>
      </svg>
    </span>
  </button>
  <button
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
    <span
      data-overlap="rectangle"
      data-placement="top-right"
    >
      <span
        data-variant="base"
        data-color="danger"
      >
      </span>
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-labelledby="title-_r_b_"
      >
        <title id="title-_r_b_">
          Skru på video
        </title>
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.25A1.75 1.75 0 0 0 2.25 7v10c0 .966.784 1.75 1.75 1.75h11A1.75 1.75 0 0 0 16.75 17v-1.572l4.021 1.286A.75.75 0 0 0 21.75 16V8a.75.75 0 0 0-.979-.714L16.75 8.573V7A1.75 1.75 0 0 0 15 5.25zm16.25 3.777-3.5 1.12v3.705l3.5 1.12zM15 17.25a.25.25 0 0 0 .25-.25V7a.25.25 0 0 0-.25-.25H4a.25.25 0 0 0-.25.25v10c0 .138.112.25.25.25z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
    </span>
  </button>
</div>
`;

exports[`In Tabs 1`] = `
<div>
  <div
    role="tablist"
    tabindex="0"
  >
    <button
      id="tab-_r_6_"
      aria-selected="true"
      data-value="value1"
      role="tab"
      type="button"
      data-roving-tabindex-item="true"
      tabindex="0"
    >
      Nye saker
      <span
        data-count="10+"
        data-variant="base"
        data-color="neutral"
      >
      </span>
    </button>
    <button
      id="tab-_r_7_"
      aria-selected="false"
      data-value="value2"
      role="tab"
      type="button"
      data-roving-tabindex-item="true"
      tabindex="-1"
    >
      Pågående saker
      <span
        data-count="2"
        data-variant="base"
        data-color="neutral"
      >
      </span>
    </button>
    <button
      id="tab-_r_8_"
      aria-selected="false"
      data-value="value3"
      role="tab"
      type="button"
      data-roving-tabindex-item="true"
      tabindex="-1"
    >
      Løste saker
    </button>
  </div>
</div>
`;

exports[`Preview 1`] = `
<span
  data-count="9+"
  data-variant="base"
>
</span>
`;

exports[`Status 1`] = `
<div>
  <span
    data-overlap="rectangle"
    data-placement="top-right"
    data-size="lg"
  >
    <span
      data-variant="base"
      data-color="danger"
    >
    </span>
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-labelledby="title-_r_5_"
    >
      <title id="title-_r_5_">
        Lagre
      </title>
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M4 3.25h2.75a.5.5 0 0 1 .5.5V7c0 .414.336.75.75.75h8a.75.75 0 0 0 .75-.75V3.75a.5.5 0 0 1 .5-.5H18a.75.75 0 0 1 .53.22l2 2c.141.14.22.331.22.53v14a.75.75 0 0 1-.75.75h-1.75a.5.5 0 0 1-.5-.5V11a.75.75 0 0 0-.75-.75H7a.75.75 0 0 0-.75.75v9.25a.5.5 0 0 1-.5.5H4a.75.75 0 0 1-.75-.75V4A.75.75 0 0 1 4 3.25m12.25 17a.5.5 0 0 1-.5.5h-7.5a.5.5 0 0 1-.5-.5v-8a.5.5 0 0 1 .5-.5h7.5a.5.5 0 0 1 .5.5zm-7.5-16.5a.5.5 0 0 1 .5-.5h5.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-5.5a.5.5 0 0 1-.5-.5zM9.25 14a.75.75 0 0 1 .75-.75h4a.75.75 0 0 1 0 1.5h-4a.75.75 0 0 1-.75-.75m.75 2.25a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
</div>
`;

exports[`System Alerts 1`] = `
<div style="display: flex; flex-direction: column; width: 30rem;">
  <h2 style="margin-block-end: var(--ds-size-4;">
    Systemvarsler
  </h2>
  <u-details
    data-variant="default"
    role="group"
  >
    <u-summary
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Kritisk
      <span
        data-count="2"
        data-variant="base"
        data-color="danger"
      >
      </span>
    </u-summary>
    <div style="gap: var(--ds-size-4); display: flex; flex-direction: column;">
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="danger"
            data-size="sm"
          >
            Kritisk
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="danger"
            data-size="sm"
          >
            Kritisk
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
    </div>
  </u-details>
  <u-details
    data-variant="default"
    role="group"
  >
    <u-summary
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Advarsler
      <span
        data-count="6"
        data-variant="base"
        data-color="warning"
      >
      </span>
    </u-summary>
    <div style="gap: var(--ds-size-4); display: flex; flex-direction: column;">
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="warning"
            data-size="sm"
          >
            Advarsler
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="warning"
            data-size="sm"
          >
            Advarsler
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="warning"
            data-size="sm"
          >
            Advarsler
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="warning"
            data-size="sm"
          >
            Advarsler
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="warning"
            data-size="sm"
          >
            Advarsler
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
      <div data-variant="default">
        <div style="display: flex; justify-content: space-between;">
          <h3 data-size="xs">
            Varsel
          </h3>
          <span
            data-variant="default"
            data-color="warning"
            data-size="sm"
          >
            Advarsler
          </span>
        </div>
        <p data-variant="default">
          Dette er et varsel.
        </p>
      </div>
    </div>
  </u-details>
  <u-details
    data-variant="default"
    role="group"
  >
    <u-summary
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Andre hendelser
      <span
        data-count="9+"
        data-variant="base"
        data-color="info"
      >
      </span>
    </u-summary>
    <div>
      <div style="gap: var(--ds-size-4); display: flex; flex-direction: column;">
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
        <div data-variant="default">
          <div style="display: flex; justify-content: space-between;">
            <h3 data-size="xs">
              Varsel
            </h3>
          </div>
          <p data-variant="default">
            Dette er et varsel.
          </p>
        </div>
      </div>
    </div>
  </u-details>
</div>
`;
